<resources>
    <string name="app_name">GPA Calc</string>
    <string name="calculate">Calculate</string>
    <string name="gpaHint">Your letter grade</string>
    <string name="credit">Credit</string>
    <string name="add">Add course</string>
    <string name="clear">Clear All</string>
    <string name="GpaPrompt">Type of GPA</string>
    <string-array name="gpa_types">
        <item>4.0 GPA</item>
        <item>9.0 GPA</item>
    </string-array>
    <string name="Options">Options</string>
    <string name="about_us">About us</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
</resources>
