<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="goraya.harpreet.gpacalc.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/editTextlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/enter_gps_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/gpaHint"
                android:inputType="textFilter" />

            <EditText
                android:id="@+id/credit_enter_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:hint="@string/credit"
                android:inputType="number"
                android:maxLength="3" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/spinner_n_addText_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/editTextlayout">


            <Button
                android:id="@+id/add_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextlayout"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="buttonClicked"
                android:text="@string/add" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/result_Textview"
                android:entries="@array/gpa_types"
                android:layout_below="@+id/editTextlayout"
                android:layout_weight="1" />
        </LinearLayout>


        <Button
            android:id="@+id/calc_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_n_addText_layout"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/calculate"
            android:onClick="buttonClicked"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/result_Textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/calc_button"
            android:layout_centerHorizontal="true"
            android:maxEms="4"
            android:textSize="24dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/clear_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/result_Textview"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:onClick="buttonClicked"
            android:text="@string/clear"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="14sp" />


        <ListView
            android:id="@+id/result_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/clear_button">


        </ListView>


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
